第一次提交

--- a/index.html
+++ b/index.html
@@ -32,11 +32,16 @@
         <div class="center ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1.5s" swiper-animate-delay="3s"><img src="img/two_center.jpg" alt=""></div>
         <div class="bottom ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="1.5s" swiper-animate-delay="1.5s"><img src="img/two_bottom.jpg" alt=""></div>
       </div>
-      <div class="swiper-slide">Slide 3</div>
+      <div class="swiper-slide three">
+        <!--<img src="img/three.jpg" alt="" class="three-1">-->
+        <img src="img/1.png" alt="" class="three-2">
+        <img src="img/2.png" alt="" class="three-3">
+      </div>
       <div class="swiper-slide">Slide 4</div>
 
     </div>
     <!-- Add Pagination -->
+    
     <div class="swiper-pagination"></div>
   </div>
   <!-- 如果需要导航按钮 -->
